--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 language: crystal
 crystal:
   - latest
-  - nightly
-matrix:
-  allow_failures:
-    - crystal: nightly
 script:
   - make test
 before_install:
-  - sudo apt-get llvm-3.5-dev
+  - sudo apt-get install llvm-3.5-dev
