added a note to the src/Makefile to explain what it's for

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,8 @@
+# This Makefile is only used for compiling icr 
+# when added as a dependency to another project.
+# This may go away in a future version if the shards postinstall command changes.
+#
+
 CRYSTAL_BIN ?= $(shell which crystal)
 PREFIX ?= /usr/local
 
