Use default dist to avoid build issue
https://travis-ci.community/t/fails-to-link-against-libgc-a-in-crystal-0-31-0/5197/7

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: crystal
 sudo: required
-dist: trusty
+# dist: trusty
 install:
   - sudo apt-get install -qy llvm-3.5-dev libreadline-dev build-essential zlib1g-dev libedit-dev libssl-dev
 script:
