feat: add cli dependencies

--- a/shard.yml
+++ b/shard.yml
@@ -7,6 +7,8 @@ dependencies:
   readline:
     github: crystal-lang/crystal-readline
     branch: master
+  crystalizer:
+    github: j8r/crystalizer
 
 authors:
   - Potapov Sergey <blake131313@gmail.com>
