--- a/shard.yml
+++ b/shard.yml
@@ -9,6 +9,7 @@ dependencies:
     branch: master
   crystalizer:
     github: j8r/crystalizer
+    version: ">= 1.0"
 
 authors:
   - Potapov Sergey <blake131313@gmail.com>
